[package]
name = "tracing-indicatif"
version = "0.3.9"
edition = "2021"
description = "Tracing layer that automatically creates and manages progress bars for active spans."
license = "MIT"
repository = "https://github.com/emersonford/tracing-indicatif"
categories = ["command-line-interface"]
keywords = ["cli", "progress", "progressbar", "progress-bar", "tracing"]
documentation = "https://docs.rs/tracing-indicatif"
exclude = ["*.gif"]

[dependencies]
indicatif = { version = "0.17.9", features = ["in_memory"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18" }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
rand = { version = "0.8.5", features = ["std_rng"] }
console = "0.15.8"
dialoguer = "0.11.0"

[lib]
name = "tracing_indicatif"

[[example]]
name = "basic"

[[example]]
name = "child_spans"

[[example]]
name = "build_console"

[[example]]
name = "per_span_style"

[[example]]
name = "progress_bar"

[[example]]
name = "filter"

[[example]]
name = "multithread"

[[example]]
name = "stdout_stderr_printing"

[[example]]
name = "dialoguer_suspend"
