[package]
name = "tracing-indicatif"
version = "0.3.14"
edition = "2024"
description = "Tracing layer that automatically creates and manages progress bars for active spans."
license = "MIT"
repository = "https://github.com/emersonford/tracing-indicatif"
categories = ["command-line-interface"]
keywords = ["cli", "progress", "progressbar", "progress-bar", "tracing"]
documentation = "https://docs.rs/tracing-indicatif"
exclude = ["*.gif"]

[dependencies]
indicatif = { version = "0.18.3", features = ["in_memory"] }
tracing = "0.1.43"
tracing-core = "0.1.35"
tracing-subscriber = { version = "0.3.22" }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
rand = { version = "0.9.2", features = ["std_rng"] }
dialoguer = "0.11.0"

[lib]
name = "tracing_indicatif"

[[example]]
name = "basic"

[[example]]
name = "child_spans"

[[example]]
name = "build_console"

[[example]]
name = "per_span_style"

[[example]]
name = "progress_bar"

[[example]]
name = "filter"

[[example]]
name = "multithread"

[[example]]
name = "stdout_stderr_printing"

[[example]]
name = "dialoguer_suspend"

[[example]]
name = "builder"
